# data-catalog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  app.py  celery_worker.py  docker-compose.yml  manage.py  pyproject.toml  setup.py  update_data.sh
.github/workflows/: ci.yml  docker-publish.yml
datacatalog/: __init__.py  assets.py  commands.py  exceptions.py  pagination.py  reverse_proxy_fix.py  settings.py.template
datacatalog/acces_handler/: access_handler.py  multiple_rems_handler.py  rems_handler.py  rems_oidc_handler.py
datacatalog/authentication/: __init__.py  ldap_authentication.py  pyoidc_authentication.py  pyoidc_views.py
datacatalog/connector/: __init__.py  csv_connector.py  daisy_connector.py  dats_connector.py  entities_connector.py  extend_entity_index.py  json_connector.py  limesurvey_connector.py  rems_client.py  rems_connector.py
datacatalog/connector/file_storage_connectors/: __init__.py  file_storage_connector.py  webdav_file_connector.py
datacatalog/controllers/: api_entities.py  login_controllers.py  sitemap_generator.py  web_controllers.py
datacatalog/converter/: entities_splitter.py  pdf_converter.py
datacatalog/exporter/: __init__.py  dats_exporter.py  entities_exporter.py  rems_pdf_exporter.py
datacatalog/forms/: __init__.py  login_form.py  request_access_form.py
datacatalog/importer/: __init__.py  entities_importer.py
datacatalog/models/: __init__.py  contact.py  dataset.py  project.py  study.py  user.py
datacatalog/solr/: __init__.py  facets.py  solr_orm.py  solr_orm_entity.py  solr_orm_fields.py  solr_orm_schema.py
datacatalog/static/css/: layout.less
datacatalog/static/js/: main.js  my_applications.js  search_controls.js
datacatalog/static/js/react/: bundle.js
datacatalog/static/public/: sitemap.xml
datacatalog/static/public/js/: common.min.js
datacatalog/storage_handler/: __init__.py  lft_handler.py
datacatalog/tasks/: __init__.py  pdf.py  pdf_tasks.py
datacatalog/templates/: about.html  base_layout.html  base_login.html  base_navbar.html  base_search.html  dataset.html  error.html  help.html  landing.html  login.html  macros.html  my_applications.html  preview.html  project.html  request_access.html  request_access_rems.html  search_dataset.html  search_organization.html  search_project.html  search_study.html  study.html
datacatalog/templates/pdf/: access_request.html
datacatalog/templates/storages/: lft.html  link.html
docker/nginx/: datacatalog.conf
tests/: base_test.py  conftest.py  factories.py  settings.py.ci  test__init__.py  test_pagination.py  test_pdf_pipeline.py
tests/acces_handler/: test_multiple_rems_instances.py  test_rems_handler.py
tests/authentication/: test_ldap_authentication.py  test_pyoidc_authentication.py  test_pyoidc_views.py
tests/connector/: test_daisy_connector.py  test_dats_connector.py  test_extend_entity_index.py  test_multi_instance_import.py  test_rems_client.py  test_rems_connector.py
tests/controllers/: test_api_entities.py  test_login_controllers.py  test_robots_controller.py  test_web_controllers.py
tests/converter/: test_converter.py
tests/data/imi_projects_test/: gse6054.json  gse6054_extraproperties.json  imi_abirisk.json  immuniverse.json
tests/dats/: dats_model.py  dats_validator.py  test_dats_validation.py
tests/exporter/: test_dats_exporter.py  test_entities_exporter.py
tests/importer/: test_importer.py
tests/models/: test_models.py
tests/solr/: test_solr_orm_schema.py
