[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "datacatalog"
version = "0.0.1"
authors = [{ name = "Valentin Grouès", email = "valentin.groues@uni.lu" }]
description = "A tool for advertising bio-medical projects and their associated datasets."
keywords = ["data catalog", "lcsb"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask==2.2.2",
    "Flask-Assets==2.0",
    "Jinja2==3.0",
    "werkzeug==2.2.2",
    "closure==20191111",
    "markupsafe==2.1.1",
    "cssmin==0.2.0",
    "webassets==2.0",
    "Flask-Testing==0.8.1",
    "requests==2.28.1",
    "GEOparse==2.0.3",
    "Flask-Caching==2.0.1",
    "python-ldap==3.3.1",
    "wtforms==2.3.3",
    "Flask-Login==0.6.2",
    "Flask-WTF==1.0.1",
    "pysolr==3.8.1",
    "ckanapi==4.6",
    "Flask-Mail==0.9.1",
    "email-validator==1.1.3",
    "oic==1.7.0",
    "jsonpath-ng==1.5.3",
    "python-slugify==5.0.2",
    "jsonschema==4.4.0",
    "click==8.1.7",
]

[project.urls]
Homepage = "https://git-r3lab.uni.lu/core-services/data-catalog"

[project.entry-points]
"flask.commands" = { assets = "flask_assets:assets" }

[project.optional-dependencies]
testing = [
    "coverage==5.5",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-factoryboy==2.7.0",
    "requests-mock==1.12.1",
]

[tool.setuptools]
package-dir = { datacatalog = "datacatalog" }
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
namespaces = false

[tool.setuptools.package-data]
datacatalog = ["datacatalog/resources/*"]
