[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "datacatalog"
version = "0.0.1"
description = "A tool for advertising bio-medical projects and their associated datasets."
readme = "README.md"
authors = [{ name = "Valentin Grouès", email = "valentin.groues@uni.lu" }]
keywords = ["data catalog", "lcsb"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "ckanapi==4.6",
    "click==8.1.7",
    "closure==20191111",
    "cssmin==0.2.0",
    "email-validator==1.1.3",
    "flask==2.2.2",
    "flask-assets==2.0",
    "flask-caching==2.0.1",
    "flask-login==0.6.2",
    "flask-mail==0.9.1",
    "flask-testing==0.8.1",
    "flask-wtf==1.0.1",
    "geoparse==2.0.3",
    "jinja2==3.0",
    "jsonpath-ng==1.5.3",
    "jsonschema==4.4.0",
    "markupsafe==2.1.1",
    "oic==1.7.0",
    "pysolr==3.8.1",
    "python-ldap==3.3.1",
    "python-slugify==5.0.2",
    "requests==2.28.1",
    "webassets==2.0",
    "werkzeug==2.2.2",
    "wtforms==2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
testing = [
    "coverage==5.5",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-factoryboy==2.7.0",
    "requests-mock==1.12.1",
]

[project.urls]
Homepage = "https://github.com/elixir-luxembourg/data-catalog"

[project.entry-points]
"flask.commands" = { assets = "flask_assets:assets" }

[tool.setuptools]
package-dir = { datacatalog = "datacatalog" }
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
namespaces = false

[tool.setuptools.package-data]
datacatalog = ["datacatalog/resources/*"]

# TODO: Remove this config section when ready to use ruff defaults
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [".venv", "venv", "migrations", "node_modules", "*copy.py", "settings.py"]

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9"]
ignore = ["E203", "E721"]

[tool.ruff.format]
# TODO: Remove exclude to format all files, then remove this comment
# exclude = ["datacatalog/*", "tests/*"]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ty.environment]
python-version = "3.10"
