[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "datacatalog"
version = "0.0.1"
authors = [{ name = "Valentin Grouès", email = "valentin.groues@uni.lu" }]
description = "A tool for advertising bio-medical projects and their associated datasets."
keywords = ["data catalog", "lcsb"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask==3.1.3",
    "Flask-Assets==2.1.0",
    "Jinja2==3.1.6",
    "werkzeug==3.1.8",
    "markupsafe==3.0.3",
    "rcssmin==1.2.2",
    "webassets==2.0",
    "requests==2.33.1",
    "GEOparse==2.0.4",
    "Flask-Caching==2.4.0",
    "python-ldap==3.4.5",
    "wtforms==3.2.1",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.3.0",
    "pysolr==3.11.0",
    "solrorm>=0.1.0",
    "Flask-Mail==0.10.0",
    "email-validator==2.3.0",
    "oic==1.7.0",
    "jsonpath-ng==1.8.0",
    "python-slugify==8.0.4",
    "Unidecode>=1.3.8",
    "jsonschema==4.26.0",
    "click==8.3.3",
    "celery[redis]==5.6.3",
    "weasyprint>=52.5,<53",  # WeasyPrint>=53 needs Pango>=1.44, and Rocky8 ships Pango<=1.42.4
    "pypdf>=6.10.2",
    "Pillow>=12.2.0",
    "gunicorn==25.3.0",
    "rjsmin==1.2.5",
]

[project.urls]
Homepage = "https://git-r3lab.uni.lu/core-services/data-catalog"

[project.entry-points]
"flask.commands" = { assets = "flask_assets:assets" }

# solrorm is the standalone Solr ORM extracted from datacatalog, hosted at
# github.com/elixir-luxembourg/solrorm (private). Pinned to a tag for
# reproducibility. For local co-development, override with an editable path:
#   solrorm = { path = "../solrorm", editable = true }
[tool.uv.sources]
solrorm = { git = "ssh://git@github.com/elixir-luxembourg/solrorm.git", tag = "v0.1.0" }

[dependency-groups]
dev = [
    "ruff",
    "ty",
]
testing = [
    "coverage==7.13.5",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-factoryboy==2.8.1",
    "requests-mock==1.12.1",
]

[tool.setuptools]
package-dir = { datacatalog = "datacatalog" }
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
namespaces = false

[tool.setuptools.package-data]
datacatalog = ["datacatalog/resources/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501", "E721"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml --cov-config=.coveragerc"
